# 2D_Quad_Spine

./: README.md
2D_Quad_Spine/: CMakeLists.txt  main.cc
2D_Quad_Spine/GUI/: simulate.cpp
2D_Quad_Spine/Robot/: Actuator.cc  Actuator.hpp  Controller.cc  Controller.hpp  Kinematics.cc  Kinematics.hpp  Trajectory.cc  Trajectory.hpp
2D_Quad_Spine/data/: data.csv
2D_Quad_Spine/include/: dataLogging.hpp  globals.hpp
2D_Quad_Spine/util/: Integrate.cc  Integrate.hpp  filter.cc  filter.hpp
2D_Quad_Spine/xml/: 2D_Quad.xml
